# mojito

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml
examples/: factorial.mojito
src/mohito/: executor.py  parser.py  stdlib.py  tokenizer.py  types.py
src/mojito/: __init__.py  cli.py  executor.py  parser.py  stdlib.py  tokenizer.py  types.py
src/mojito/types/: __init__.py  ast.py  runtime.py  tokens.py
tests/: test_mohito_tokenizer.py  test_parser.py  test_tokenizer.py
