[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "mojito"
version = "0.1.0"
authors = [
    { name="Dmitry Molcahnov (samedit66)", email="samedit66@yandex.ru" }
]
description = "A minimalist concatenative language in pure Python"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytype>=2024.10.11",
    "ruff>=0.12.4",
]

[project.urls]
Homepage = "https://github.com/samedit66/mojito"
Issues = "https://github.com/samedit66/mojito/issues"
